apps/diskover/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: diskover
  labels:
    name: diskover
