apps/diskover/service-diskover.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: diskover
  namespace: diskover
spec:
  selector:
    app: diskover
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: elasticsearch
      protocol: TCP
      port: 9200
      targetPort: 9200
  type: ClusterIP
